--- a/static/chat.html
+++ b/static/chat.html
@@ -5,41 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <style>
-        body, html {height:100%;margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;background:#f5f5f5;}
-        #layout{display:flex;height:100vh;}
-        #historyPanel{width:250px;background:#fafafa;border-right:1px solid #ccc;overflow-y:auto;transition:transform .3s;position:relative;}
-        #historyPanel.collapsed{transform:translateX(-100%);}        
-        #toggleHistory{position:absolute;top:10px;right:-25px;width:25px;height:25px;border:none;background:#1E88E5;color:#fff;border-radius:4px;cursor:pointer;}
-        #historyList{list-style:none;margin:0;padding:40px 0 10px 0;}
-        #historyList li{padding:8px 12px;border-bottom:1px solid #ddd;font-size:14px;cursor:pointer;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
-        #chatContainer{display:flex;flex-direction:column;flex:1;max-width:800px;margin:10px auto;border:1px solid #ccc;border-radius:8px;background:#fff;}
-        header{display:flex;align-items:center;justify-content:space-between;padding:10px;border-bottom:1px solid #ccc;background:#fafafa;}
-        #messages{flex:1;overflow-y:auto;padding:10px;}
-        .msg{margin-bottom:10px;padding:8px 12px;border-radius:8px;max-width:80%;}
-        .user{background:#1E88E5;color:#fff;margin-left:auto;}
-        .bot{background:#e0e0e0;color:#000;margin-right:auto;}
-        form{display:flex;border-top:1px solid #ccc;}
-        input[type="text"]{flex:1;padding:10px;border:none;font-size:14px;}
-        input[type="text"]:focus{outline:none;}
-        button{padding:0 16px;border:none;background:#1E88E5;color:#fff;cursor:pointer;}
-        button:hover{background:#1976D2;}
+        :root {
+            --primary: #1E88E5;
+            --primary-dark: #1976D2;
+            --gray-100: #f5f5f5;
+            --gray-200: #e0e0e0;
+            --gray-700: #616161;
+            --gray-800: #424242;
+            --white: #ffffff;
+        }
+        html,body{height:100%;margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;background:var(--gray-100);color:var(--gray-800);}
+        #app{display:flex;height:100%;overflow:hidden;}
+        #sidebar{width:260px;background:var(--white);border-right:1px solid var(--gray-200);display:flex;flex-direction:column;transition:transform .3s ease;}
+        #sidebar.collapsed{transform:translateX(-100%);}
+        #sidebar header{display:flex;align-items:center;justify-content:space-between;padding:10px 15px;border-bottom:1px solid var(--gray-200);}
+        #sidebar header h2{font-size:18px;margin:0;}
+        #newChat{background:var(--primary);border:none;color:var(--white);padding:6px 12px;border-radius:6px;cursor:pointer;font-size:14px;}
+        #newChat:hover{background:var(--primary-dark);}
+        #search{margin:10px;padding:8px;border:1px solid var(--gray-200);border-radius:6px;font-size:14px;width:calc(100% - 20px);}
+        #chatList{flex:1;overflow-y:auto;list-style:none;margin:0;padding:0;}
+        #chatList li{padding:10px 15px;border-bottom:1px solid var(--gray-200);cursor:pointer;transition:background .2s;}
+        #chatList li:hover{background:var(--gray-100);}
+        #chatList .title{font-weight:600;}
+        #chatList .preview{font-size:12px;color:var(--gray-700);margin-top:4px;}
+        #chatWindow{flex:1;display:flex;flex-direction:column;max-width:800px;margin:0 auto;background:var(--white);box-shadow:0 0 6px rgba(0,0,0,0.1);}
+        #chatHeader{display:flex;align-items:center;justify-content:space-between;padding:10px 15px;background:linear-gradient(90deg,var(--primary),var(--primary-dark));color:var(--white);}
+        #toggleSidebar{background:none;border:none;color:var(--white);font-size:20px;cursor:pointer;}
+        #messages{flex:1;overflow-y:auto;padding:15px;}
+        .msg{max-width:80%;margin-bottom:12px;padding:10px 14px;border-radius:10px;line-height:1.4;}
+        .user{background:var(--primary);color:var(--white);margin-left:auto;}
+        .bot{background:var(--gray-200);color:var(--gray-800);margin-right:auto;}
+        form{display:flex;border-top:1px solid var(--gray-200);}
+        #chatInput{flex:1;padding:12px;border:none;font-size:15px;}
+        #chatInput:focus{outline:none;}
+        #sendBtn{background:var(--primary);color:var(--white);border:none;padding:0 18px;cursor:pointer;transition:background .2s;}
+        #sendBtn:hover{background:var(--primary-dark);}
+        @media(max-width:768px){#sidebar{position:absolute;z-index:10;height:100%;}
+        #chatWindow{max-width:none;width:100%;}}
     </style>
 </head>
 <body>
-<div id="layout">
-    <div id="historyPanel" class="collapsed">
-        <button id="toggleHistory">›</button>
-        <ul id="historyList"></ul>
-    </div>
-    <div id="chatContainer">
+<div id="app">
+    <div id="sidebar" class="collapsed">
         <header>
-            <button id="backBtn">Home</button>
-            <h2 id="chatTitle">Chat</h2>
+            <h2>Chats</h2>
+            <button id="newChat">New Chat</button>
         </header>
+        <input id="search" type="text" placeholder="Search chats">
+        <ul id="chatList"></ul>
+    </div>
+    <div id="chatWindow">
+        <div id="chatHeader">
+            <button id="toggleSidebar">☰</button>
+            <span id="chatTitle">Chat</span>
+            <button id="homeBtn">Home</button>
+        </div>
         <div id="messages"></div>
-    <form id="chatForm">
-        <input id="chatInput" type="text" placeholder="Type your message..." autocomplete="off"/>
-        <button type="submit">Send</button>
+        <form id="chatForm">
+            <input id="chatInput" type="text" autocomplete="off" placeholder="Type your message...">
+            <button id="sendBtn" type="submit">Send</button>
         </form>
     </div>
 </div>
@@ -50,20 +74,52 @@ const agent=params.get('agent')||'';
 const token=localStorage.getItem('rag_auth_token');
 const sessionId=sessionStorage.getItem('cq_sid')||Math.random().toString(36).slice(2);
 sessionStorage.setItem('cq_sid',sessionId);
+let sidebarVisible=false;
+let chatHistory=[];
+let filteredHistory=[];
+let selectedChat=null;
 
-const chatTitle=document.getElementById('chatTitle');
-chatTitle.textContent=`Chat with ${agent}`;
+const sidebar=document.getElementById('sidebar');
+const toggleSidebarBtn=document.getElementById('toggleSidebar');
+const chatTitleEl=document.getElementById('chatTitle');
+const chatList=document.getElementById('chatList');
+const searchInput=document.getElementById('search');
+chatTitleEl.textContent=`Chat with ${agent}`;
 
-document.getElementById('backBtn').onclick=()=>{window.location.href='/user.html'};
+toggleSidebarBtn.onclick=()=>{
+    sidebarVisible=!sidebarVisible;
+    sidebar.classList.toggle('collapsed',!sidebarVisible);
+};
 
-const historyPanel=document.getElementById('historyPanel');
-const toggleHistory=document.getElementById('toggleHistory');
-const historyList=document.getElementById('historyList');
+document.getElementById('homeBtn').onclick=()=>{window.location.href='/user.html'};
 
-toggleHistory.addEventListener('click',()=>{
-    historyPanel.classList.toggle('collapsed');
-    toggleHistory.textContent=historyPanel.classList.contains('collapsed')?'›':'‹';
+document.getElementById('newChat').onclick=()=>{
+    document.getElementById('messages').innerHTML='';
+    selectedChat=null;
+};
+
+searchInput.addEventListener('input',()=>{
+    const q=searchInput.value.toLowerCase();
+    filteredHistory=chatHistory.filter(c=>c.question.toLowerCase().includes(q));
+    renderHistory();
 });
+
+function renderHistory(){
+    chatList.innerHTML='';
+    (filteredHistory.length?filteredHistory:chatHistory).forEach(item=>{
+        const li=document.createElement('li');
+        const title=document.createElement('div');
+        title.className='title';
+        title.textContent=item.question.slice(0,30);
+        const preview=document.createElement('div');
+        preview.className='preview';
+        preview.textContent=new Date(item.timestamp).toLocaleString();
+        li.appendChild(title);
+        li.appendChild(preview);
+        li.onclick=()=>sendMessage(item.question);
+        chatList.appendChild(li);
+    });
+}
 
 function addMessage(text,cls){
     const div=document.createElement('div');
@@ -76,15 +132,10 @@ function addMessage(text,cls){
 async function loadHistory(){
     const res=await fetch(`/history?tenant=${tenant}&agent=${agent}&limit=25`,{headers:{Authorization:`Bearer ${token}`}});
     if(res.ok){
-        const data=await res.json();
-        data.forEach((i,idx)=>{
-            addMessage(i.question,'user');
-            addMessage(i.answer,'bot');
-            const li=document.createElement('li');
-            li.textContent=i.question;
-            li.onclick=()=>sendMessage(i.question);
-            historyList.appendChild(li);
-        });
+        chatHistory=await res.json();
+        filteredHistory=chatHistory;
+        chatHistory.forEach(i=>{addMessage(i.question,'user');addMessage(i.answer,'bot');});
+        renderHistory();
     }
 }
 
@@ -103,7 +154,11 @@ async function sendMessage(msg){
     }
 }
 
-document.getElementById('chatForm').addEventListener('submit',e=>{e.preventDefault();const m=document.getElementById('chatInput');if(m.value.trim()){const t=m.value.trim();m.value='';sendMessage(t);}});
+document.getElementById('chatForm').addEventListener('submit',e=>{
+    e.preventDefault();
+    const m=document.getElementById('chatInput');
+    if(m.value.trim()){const t=m.value.trim();m.value='';sendMessage(t);}
+});
 
 loadHistory();
 </script>
