--- a/static/chat.html
+++ b/static/chat.html
@@ -28,7 +28,7 @@
         #chatList li:hover{background:var(--gray-100);}
         #chatList .title{font-weight:600;}
         #chatList .preview{font-size:12px;color:var(--gray-700);margin-top:4px;}
-        #chatWindow{flex:1;display:flex;flex-direction:column;max-width:800px;margin:0 auto;background:var(--white);box-shadow:0 0 6px rgba(0,0,0,0.1);}
+        #chatWindow{flex:1;display:flex;flex-direction:column;max-width:800px;margin:0 auto;background:var(--white);box-shadow:0 0 6px rgba(0,0,0,0.1);border-bottom:2px solid var(--gray-200);}
         #chatHeader{display:flex;align-items:center;justify-content:space-between;padding:10px 15px;background:linear-gradient(90deg,var(--primary),var(--primary-dark));color:var(--white);}
         #toggleSidebar{background:none;border:none;color:var(--white);font-size:20px;cursor:pointer;}
         #messages{flex:1;overflow-y:auto;padding:15px;}
@@ -36,7 +36,7 @@
         .user{background:var(--primary);color:var(--white);margin-left:auto;}
         .bot{background:var(--gray-200);color:var(--gray-800);margin-right:auto;}
         form{display:flex;border-top:1px solid var(--gray-200);}
-        #chatInput{flex:1;padding:12px;border:none;font-size:15px;}
+        #chatInput{flex:1;padding:16px;border:none;font-size:16px;}
         #chatInput:focus{outline:none;}
         #sendBtn{background:var(--primary);color:var(--white);border:none;padding:0 18px;cursor:pointer;transition:background .2s;}
         #sendBtn:hover{background:var(--primary-dark);}
@@ -62,7 +62,7 @@
         </div>
         <div id="messages"></div>
         <form id="chatForm">
-            <input id="chatInput" type="text" autocomplete="off" placeholder="Type your message...">
+            <input id="chatInput" type="text" autocomplete="off" placeholder="Please ask your question...">
             <button id="sendBtn" type="submit">Send</button>
         </form>
     </div>
@@ -134,7 +134,6 @@ async function loadHistory(){
     if(res.ok){
         chatHistory=await res.json();
         filteredHistory=chatHistory;
-        chatHistory.forEach(i=>{addMessage(i.question,'user');addMessage(i.answer,'bot');});
         renderHistory();
     }
 }
