--- a/static/user_files.html
+++ b/static/user_files.html
@@ -7,15 +7,22 @@
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
         body { font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif; background:#f5f5f5; color:#424242; line-height:1.6; padding:40px; }
+        .header { display:flex; justify-content:space-between; align-items:center; margin-bottom:20px; }
         table { width:100%; border-collapse:collapse; background:#fff; }
         th, td { padding:8px; border-bottom:1px solid #e0e0e0; }
         th { background:#e0e0e0; text-transform:uppercase; font-size:14px; }
         button { padding:6px 12px; border:none; border-radius:6px; background:#f44336; color:#fff; cursor:pointer; }
+        .btn { display:inline-block; padding:12px 24px; background:#1E88E5; color:#fff; border:none; border-radius:8px; cursor:pointer; font-size:14px; font-weight:600; }
+        .btn:hover { background:#1976D2; }
+        .btn-small { padding:6px 12px; font-size:12px; }
         a { color:#1E88E5; text-decoration:none; }
     </style>
 </head>
 <body>
-    <h2>Files</h2>
+    <div class="header">
+        <h2>Files</h2>
+        <button id="homeBtn" class="btn btn-small" type="button">Home</button>
+    </div>
     <table id="filesTable">
         <thead>
             <tr>
@@ -42,6 +49,7 @@ let currentPage = 1;
 const pageSize = 25;
 let sortField = 'date';
 let sortAsc = false;
+document.getElementById('homeBtn').onclick = () => { window.location.href = '/user.html'; };
 
 init();
 
