--- a/static/user_upload.html
+++ b/static/user_upload.html
@@ -7,9 +7,11 @@
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
         body { font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif; background:#f5f5f5; color:#424242; line-height:1.6; padding:40px; }
+        .header { display:flex; justify-content:space-between; align-items:center; margin-bottom:20px; }
         .drop-zone { border:2px dashed #1E88E5; border-radius:12px; padding:60px; text-align:center; background:#fff; cursor:pointer; }
         .drop-zone.hover { background:#e0e0e0; }
         .btn { margin-top:20px; padding:12px 24px; background:#1E88E5; color:#fff; border:none; border-radius:8px; cursor:pointer; font-weight:600; }
+        .btn-small { padding:6px 12px; font-size:12px; margin-top:0; }
         table { width:100%; margin-top:20px; border-collapse:collapse; }
         th, td { padding:8px; border-bottom:1px solid #e0e0e0; text-align:left; }
         .hidden { display:none; }
@@ -18,7 +20,10 @@
     </style>
 </head>
 <body>
-    <h2>Upload Files</h2>
+    <div class="header">
+        <h2>Upload Files</h2>
+        <button id="homeBtn" class="btn btn-small" type="button">Home</button>
+    </div>
     <div id="dropZone" class="drop-zone">Drag and Drop files here<br>or<br><button id="fileSelect" class="btn" type="button">Click to upload</button></div>
     <input type="file" id="fileInput" multiple class="hidden" />
     <div id="result" style="margin-top:20px"></div>
@@ -56,6 +61,7 @@ const replacePrompt = document.getElementById('replacePrompt');
 const replaceMessage = document.getElementById('replaceMessage');
 const replaceBtn = document.getElementById('replaceBtn');
 const abortBtn = document.getElementById('abortBtn');
+document.getElementById('homeBtn').onclick = () => { window.location.href = '/user.html'; };
 let pendingFiles = null;
 
 replaceBtn.addEventListener('click', async () => {
